Peers class and socket list from application.properties added but not implemented (only 1 peer right now) refactor Peer class, add runnable classes for its its requests, with syncronise peer implemented, and poll peer unimplemented until transaction stuff planned Helper method added to convert JSON block response into block obeject for peers refactor BlockchainApiDelegateImpl.java so that the Block to Block modle conversion method is in a sperate util class General refactor of generated API classes so its cleaner, everything generated goes in '...server.api.generated...' package Rename server-api module to server-api-generator
